[metadata]
name = horizon
summary = OpenStack Dashboard
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/horizon/latest/
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: OpenStack
    Framework :: Django
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Internet :: WWW/HTTP

[global]
setup-hooks =
    openstack_dashboard.hooks.setup_hook

[files]
packages =
    horizon
    openstack_dashboard
    openstack_auth

[coverage:report]
ignore_errors = True
include =
    horizon/*
    openstack_dashboard/*
    openstack_auth/*
omit =
    /usr*
    setup.py
    *egg*
    .venv/*

[coverage:html]
directory = reports

[extract_messages]
keywords = gettext_noop gettext_lazy ngettext_lazy:1,2 ugettext_noop ugettext_lazy ungettext_lazy:1,2 npgettext:1c,2,3 pgettext_lazy:1c,2 npgettext_lazy:1c,2,3
add_comments = Translators:

[entry_points]
oslo.config.opts =
    openstack_dashboard = openstack_dashboard.utils.config:list_options
